# opencv-wrapper-egbis

./: .gitignore  CMakeLists.txt  README.md  egbis.cpp  egbis.h  main.cpp  segment-image.h
egbis/: convolve.cpp  convolve.h  disjoint-set.cpp  disjoint-set.h  filter.cpp  filter.h  image.h  imconv.cpp  imconv.h  imutil.h  misc.cpp  misc.h  pnmfile.h  segment-graph.cpp  segment-graph.h  segment-image.cpp  segment-image.h  segment.cpp
images/: README.md  lulea1.ppm  values-used-for-egbis.txt  vasteras1.ppm  vasteras2.ppm
